# elt_dbt

./: README.md  pyproject.toml
dbt_elt/: .user.yml  dbt_project.yml  profiles.yml
dbt_elt/models/example/: schema.yml
dbt_elt/models/example/silver/: trabalho_remoto.sql
extraction/: script.py  script_v2.py  script_v3.py
